--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <header>
       <span class="body">
         <span class="span-1 gap-2 d-flex align-items-center"
-          ><img style="width: 15px;" src="./assets/icons/Sms.svg" alt="" /> Aloqa uchun</span
+          ><img style="width: 15px" src="./assets/icons/Sms.svg" alt="" /> Aloqa
+          uchun</span
         >
         <span class="span-2 gap-2 d-flex align-items-center"
           >UZ<img src="./assets/icons/Bottom.svg" alt=""
@@ -46,20 +47,24 @@
       </span>
 
       <div class="container">
-        <nav class="nav gap-5">
-          <a href="#"><img class="mt-3" src="./assets/icons/Logo.svg" alt="" /></a>
-          <button class="d-flex align-items-center"><img class="w-10 mx-2" src="./assets/icons/Menu.svg" alt="" /> KATALOG</button>
+        <nav class="nav gap-4">
+          <a href="#"
+            ><img class="mt-3" src="./assets/icons/Logo.svg" alt=""
+          /></a>
+          <button class="d-flex align-items-center">
+            <img class="mx-2" src="./assets/icons/Menu.svg" alt="" /> KATALOG
+          </button>
           <span>
-            <input 
+            <input
               type="text"
-              class="form-control mx-2"
+              class="form-control"
               placeholder="Maxsulotlarni izlash"
             />
             <img class="bg-primary" src="./assets/icons/qidirish.svg" alt="" />
-          </span>  
+          </span>
           <div class="buttons d-flex align-items-center gap-4">
             <img src="./assets/images/Sevimlilar.png" alt="" />
-            <img  src="./assets/images/Korzina.png" alt="" />
+            <img src="./assets/images/Korzina.png" alt="" />
             <button>Kirish</button>
           </div>
         </nav>
@@ -68,6 +73,95 @@
 
     <!-- header ends -->
 
-    
+    <!-- main sections starts -->
+
+    <main>
+      <div class="container">
+        <section class="section-1">
+          <div class="wrapper">
+            <div id="carouselExampleCaptions" class="carousel slide">
+              <div class="carousel-indicators">
+                <button
+                  type="button"
+                  data-bs-target="#carouselExampleCaptions"
+                  data-bs-slide-to="0"
+                  class="active"
+                  aria-current="true"
+                  aria-label="Slide 1"
+                ></button>
+                <button
+                  type="button"
+                  data-bs-target="#carouselExampleCaptions"
+                  data-bs-slide-to="1"
+                  aria-label="Slide 2"
+                ></button>
+                <button
+                  type="button"
+                  data-bs-target="#carouselExampleCaptions"
+                  data-bs-slide-to="2"
+                  aria-label="Slide 3"
+                ></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="./assets/images/hero.jpg"
+                    class="d-block w-100 rounded-5"
+                    alt=""
+                  />
+                  <div class="carousel-caption d-none d-md-block rounded"></div>
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="./assets/images/hero.jpg"
+                    class="d-block w-100 rounded-5"
+                    alt=""
+                  />
+                  <div class="carousel-caption d-none d-md-block"></div>
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="./assets/images/hero.jpg"
+                    class="d-block w-100 rounded-5"
+                    alt=""
+                  />
+                  <div class="carousel-caption d-none d-md-block"></div>
+                </div>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </section>
+
+        <section class="section-2">
+          <img src="./assets/images/Group.png" alt="">
+        </section>
+      </div>
+    </main>
+
+    <!-- main sections ends -->
   </body>
 </html>
