--- a/index.html
+++ b/index.html
@@ -164,38 +164,38 @@
             </span>
 
             <span class="card-1">
-              <img src="/assets/images/Mac.png" alt="" />
-              <p>Kompyuterlar va notebooklar</p>
+              <img src="./assets/icons/image 6.svg" alt="" />
+              <p>Televizor va maishiy texnikalar</p>
             </span>
 
             <span class="card-1">
-              <img src="/assets/images/Mac.png" alt="" />
-              <p>Kompyuterlar va notebooklar</p>
+              <img src="./assets/icons/image 6 (1).svg" alt="" />
+              <p>iPhone smartfonlar</p>
             </span>
 
             <span class="card-1">
-              <img src="/assets/images/Mac.png" alt="" />
-              <p>Kompyuterlar va notebooklar</p>
+              <img src="./assets/icons/image 6 (2).svg" alt="" />
+              <p>Smart soatlar</p>
             </span>
 
             <span class="card-1">
-              <img src="/assets/images/Mac.png" alt="" />
-              <p>Kompyuterlar va notebooklar</p>
+              <img src="./assets/icons/image 6 (3).svg" alt="" />
+              <p>Quloqchinlar</p>
             </span>
 
             <span class="card-1">
-              <img src="/assets/images/Mac.png" alt="" />
-              <p>Kompyuterlar va notebooklar</p>
+              <img src="./assets/icons/image 6 (4).svg" alt="" />
+              <p>Kondetsioner</p>
             </span>
 
             <span class="card-1">
-              <img src="/assets/images/Mac.png" alt="" />
-              <p>Kompyuterlar va notebooklar</p>
+              <img src="./assets/icons/image 6 (5).svg" alt="" />
+              <p>Muzlatgichlar</p>
             </span>
 
             <span class="card-1">
-              <img src="/assets/images/Mac.png" alt="" />
-              <p>Kompyuterlar va notebooklar</p>
+              <img src="./assets/icons/image 6 (6).svg" alt="" />
+              <p>Kir yuvish mashinalari</p>
             </span>
           </div>
           <div class="button-2">Batafsil</div>
@@ -404,6 +404,73 @@
                 <a href="#" class="btn btn-primary w-50">Sotib olish</a>
               </div>
             </div>
+          </div>
+          <div class="button-2">Batafsil</div>
+        </section>
+        
+        <section class="section-4">
+          <div
+            id="carouselExampleIndicators"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./assets/images/image 1 (2).jpg" class="d-block w-100" alt="..." />
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/images/image 1 (2).jpg" class="d-block w-100" alt="..." />
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/images/image 1 (2).jpg" class="d-block w-100" alt="..." />
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
         </section>
       </div>
