--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
     <!-- header ends -->
 
     <!-- main sections starts -->
-
     <main>
       <div class="container">
         <section class="section-1">
@@ -407,7 +406,7 @@
           </div>
           <div class="button-2">Batafsil</div>
         </section>
-        
+
         <section class="section-4">
           <div
             id="carouselExampleIndicators"
@@ -438,13 +437,25 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./assets/images/image 1 (2).jpg" class="d-block w-100" alt="..." />
+                <img
+                  src="./assets/images/image 1 (2).jpg"
+                  class="d-block w-100"
+                  alt="..."
+                />
               </div>
               <div class="carousel-item">
-                <img src="./assets/images/image 1 (2).jpg" class="d-block w-100" alt="..." />
+                <img
+                  src="./assets/images/image 1 (2).jpg"
+                  class="d-block w-100"
+                  alt="..."
+                />
               </div>
               <div class="carousel-item">
-                <img src="./assets/images/image 1 (2).jpg" class="d-block w-100" alt="..." />
+                <img
+                  src="./assets/images/image 1 (2).jpg"
+                  class="d-block w-100"
+                  alt="..."
+                />
               </div>
             </div>
             <button
@@ -473,8 +484,464 @@
             </button>
           </div>
         </section>
+
+        <section class="section-3">
+          <h1>Eng ommabop</h1>
+          <div class="cards-3">
+            <div class="card" style="width: 18rem">
+              <img class="card-like" src="./assets/icons/like.svg" alt="" />
+              <img
+                src="./assets/icons/image 15.svg"
+                class="card-img-top"
+                alt="..."
+              />
+              <img
+                class="card-shop"
+                src="./assets/icons/card-shop.svg"
+                alt=""
+              />
+
+              <div class="card-body">
+                <h5 class="card-title text-primary">14 299 000 so’m</h5>
+                <p class="card-text">
+                  Apple iPhone 14 Pro Max 2.4 2019 Intel core i5 DDR3 8 GB SSD
+                  256 GB
+                </p>
+                <p class="grey-text">1230 ta buyurtma</p>
+                <a href="#" class="btn btn-primary w-50">Sotib olish</a>
+              </div>
+            </div>
+
+            <div class="card" style="width: 18rem">
+              <img class="card-like" src="./assets/icons/like.svg" alt="" />
+
+              <img
+                src="./assets/icons/image 15.svg"
+                class="card-img-top"
+                alt="..."
+              />
+              <img
+                class="card-shop"
+                src="./assets/icons/card-shop.svg"
+                alt=""
+              />
+
+              <div class="card-body">
+                <h5 class="card-title text-primary">14 299 000 so’m</h5>
+                <p class="card-text">
+                  Apple iPhone 14 Pro Max 2.4 2019 Intel core i5 DDR3 8 GB SSD
+                  256 GB
+                </p>
+                <p class="grey-text">1230 ta buyurtma</p>
+                <a href="#" class="btn btn-primary w-50">Sotib olish</a>
+              </div>
+            </div>
+
+            <div class="card" style="width: 18rem">
+              <img class="card-like" src="./assets/icons/like.svg" alt="" />
+              <img
+                src="./assets/icons/image 15.svg"
+                class="card-img-top"
+                alt="..."
+              />
+              <img
+                class="card-shop"
+                src="./assets/icons/card-shop.svg"
+                alt=""
+              />
+
+              <div class="card-body">
+                <h5 class="card-title text-primary">14 299 000 so’m</h5>
+                <p class="card-text">
+                  Apple iPhone 14 Pro Max 2.4 2019 Intel core i5 DDR3 8 GB SSD
+                  256 GB
+                </p>
+                <p class="grey-text">1230 ta buyurtma</p>
+                <a href="#" class="btn btn-primary w-50">Sotib olish</a>
+              </div>
+            </div>
+
+            <div class="card" style="width: 18rem">
+              <img class="card-like" src="./assets/icons/like.svg" alt="" />
+
+              <img
+                src="./assets/icons/image 15.svg"
+                class="card-img-top"
+                alt="..."
+              />
+              <img
+                class="card-shop"
+                src="./assets/icons/card-shop.svg"
+                alt=""
+              />
+
+              <div class="card-body">
+                <h5 class="card-title text-primary">14 299 000 so’m</h5>
+                <p class="card-text">
+                  Apple iPhone 14 Pro Max 2.4 2019 Intel core i5 DDR3 8 GB SSD
+                  256 GB
+                </p>
+                <p class="grey-text">1230 ta buyurtma</p>
+                <a href="#" class="btn btn-primary w-50">Sotib olish</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="cards-33">
+            <div class="card" style="width: 18rem">
+              <img class="card-like" src="./assets/icons/like.svg" alt="" />
+
+              <img
+                src="./assets/icons/image 15.svg"
+                class="card-img-top"
+                alt="..."
+              />
+              <img
+                class="card-shop"
+                src="./assets/icons/card-shop.svg"
+                alt=""
+              />
+
+              <div class="card-body">
+                <h5 class="card-title text-primary">14 299 000 so’m</h5>
+                <p class="card-text">
+                  Apple iPhone 14 Pro Max 2.4 2019 Intel core i5 DDR3 8 GB SSD
+                  256 GB
+                </p>
+                <p class="grey-text">1230 ta buyurtma</p>
+                <a href="#" class="btn btn-primary w-50">Sotib olish</a>
+              </div>
+            </div>
+
+            <div class="card" style="width: 18rem">
+              <img class="card-like" src="./assets/icons/like.svg" alt="" />
+              <img
+                src="./assets/icons/image 15.svg"
+                class="card-img-top"
+                alt="..."
+              />
+              <img
+                class="card-shop"
+                src="./assets/icons/card-shop.svg"
+                alt=""
+              />
+
+              <div class="card-body">
+                <h5 class="card-title text-primary">14 299 000 so’m</h5>
+                <p class="card-text">
+                  Apple iPhone 14 Pro Max 2.4 2019 Intel core i5 DDR3 8 GB SSD
+                  256 GB
+                </p>
+                <p class="grey-text">1230 ta buyurtma</p>
+                <a href="#" class="btn btn-primary w-50">Sotib olish</a>
+              </div>
+            </div>
+            <div class="card" style="width: 18rem">
+              <img class="card-like" src="./assets/icons/like.svg" alt="" />
+
+              <img
+                src="./assets/icons/image 15.svg"
+                class="card-img-top"
+                alt="..."
+              />
+              <img
+                class="card-shop"
+                src="./assets/icons/card-shop.svg"
+                alt=""
+              />
+
+              <div class="card-body">
+                <h5 class="card-title text-primary">14 299 000 so’m</h5>
+                <p class="card-text">
+                  Apple iPhone 14 Pro Max 2.4 2019 Intel core i5 DDR3 8 GB SSD
+                  256 GB
+                </p>
+                <p class="grey-text">1230 ta buyurtma</p>
+                <a href="#" class="btn btn-primary w-50">Sotib olish</a>
+              </div>
+            </div>
+
+            <div class="card" style="width: 18rem">
+              <img class="card-like" src="./assets/icons/like.svg" alt="" />
+              <img
+                src="./assets/icons/image 15.svg"
+                class="card-img-top"
+                alt="..."
+              />
+              <img
+                class="card-shop"
+                src="./assets/icons/card-shop.svg"
+                alt=""
+              />
+
+              <div class="card-body">
+                <h5 class="card-title text-primary">14 299 000 so’m</h5>
+                <p class="card-text">
+                  Apple iPhone 14 Pro Max 2.4 2019 Intel core i5 DDR3 8 GB SSD
+                  256 GB
+                </p>
+                <p class="grey-text">1230 ta buyurtma</p>
+                <a href="#" class="btn btn-primary w-50">Sotib olish</a>
+              </div>
+            </div>
+          </div>
+          <div class="button-2">Batafsil</div>
+        </section>
+
+        <section class="section-5">
+          <h1 class="mb-3">Brendlar bo’yicha</h1>
+
+          <div class="cards-5">
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar.svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (1).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (2).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (3).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (4).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (5).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar.svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (1).svg" alt="" />
+            </span>
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (2).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (3).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (4).svg" alt="" />
+            </span>
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (5).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar.svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (1).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (2).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (3).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (4).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (5).svg" alt="" />
+            </span>
+          </div>
+        </section>
+
+        <section class="section-4">
+          <div
+            id="carouselExampleIndicators"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="./assets/images/image 1 (2).jpg"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./assets/images/image 1 (2).jpg"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./assets/images/image 1 (2).jpg"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </section>
+
+        <section class="section-5">
+          <h1 class="mb-3">Do'konlarimiz</h1>
+
+          <div class="cards-5 mt-5">
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (7).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (8).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (9).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (10).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (11).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (12).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (7).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (8).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (9).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (10).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (11).svg" alt="" />
+            </span>
+
+            <span class="card-5">
+              <img src="./assets/icons/Brendlar (12).svg" alt="" />
+            </span>
+          </div>
+        </section>
       </div>
     </main>
     <!-- main sections ends -->
+
+    <!-- footer starts -->
+    <footer>
+      <div class="container">
+        <ul>
+          <strong>Hujjatlar</strong>
+          <li>Umumiy shartlar</li>
+          <li>Ofertalar arxivi</li>
+          <li>Nizom</li>
+          <li>Guvohnoma</li>
+        </ul>
+        <ul>
+          <strong>Servis</strong>
+          <li>Do’konlar</li>
+          <li>Biz haqimizda</li>
+          <li>Hamkorlik uchun</li>
+          <li>Qaytarish</li>
+          <li>Promokodlar</li>
+        </ul>
+        <ul>
+          <strong>Mahsulotlar katalogi</strong>
+          <li>Katalog 1</li>
+          <li>Katalog 1</li>
+          <li>Katalog 1</li>
+          <li>Katalog 1</li>
+          <li>Katalog 1</li>
+          <li>Katalog 1</li>
+        </ul>
+
+        <ul id="axborot">
+          <strong>Axborot xizmati</strong>
+          <li>contact.@nextstore.uz</li>
+          <li>+998 97 712 96 96 <br />+998 95 503 09 09</li>
+          <li>Sag’bon 186, Olmazor tumani, Toshkent, O'zbekiston</li>
+          <span id="icons">
+          <img src="./assets/icons/FACEBOOK.svg" alt="" />
+          <img src="./assets/icons/INSTAGRAM.svg" alt="" />
+          <img src="./assets/icons/Telegram - Original.svg" alt="" />
+          <img src="./assets/icons/TikTok - Original.svg" alt="" />
+        </span>
+        </ul>
+        
+      </div>
+    </footer>
+    <!-- footer ends -->
   </body>
 </html>
