--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
+
     <!-- header starts -->
     <header>
       <span class="body">
@@ -45,31 +46,37 @@
           >UZ<img src="./assets/icons/Bottom.svg" alt=""
         /></span>
       </span>
-
       <div class="container">
-        <nav class="nav gap-4">
-          <a href="#"
-            ><img class="mt-3" src="./assets/icons/Logo.svg" alt=""
-          /></a>
-          <button class="d-flex align-items-center">
-            <img class="mx-2" src="./assets/icons/Menu.svg" alt="" /> KATALOG
-          </button>
-          <span>
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Maxsulotlarni izlash"
-            />
-            <img class="bg-primary" src="./assets/icons/qidirish.svg" alt="" />
-          </span>
-          <div class="buttons d-flex align-items-center gap-4">
-            <img src="./assets/images/Sevimlilar.png" alt="" />
-            <img src="./assets/images/Korzina.png" alt="" />
-            <button>Kirish</button>
-          </div>
-        </nav>
-      </div>
+        <div class="container">
+          <nav class="nav gap-4">
+            <a href="#"
+              ><img class="mt-3" src="./assets/icons/Logo.svg" alt=""
+            /></a>
+            <button class="d-flex align-items-center">
+              <img class="mx-2" src="./assets/icons/Menu.svg" alt="" /> KATALOG
+            </button>
+            <span>
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Maxsulotlarni izlash"
+              />
+              <img
+                class="bg-primary"
+                src="./assets/icons/qidirish.svg"
+                alt=""
+              />
+            </span>
+            <div class="buttons d-flex align-items-center gap-4">
+              <img src="./assets/images/Sevimlilar.png" alt="" />
+              <img src="./assets/images/Korzina.png" alt="" />
+              <button>Kirish</button>
+            </div>
+          </nav>
+        </div>
+     
     </header>
+
     <!-- header ends -->
 
     <!-- main sections starts -->
@@ -867,7 +874,7 @@
             </span>
 
             <span class="card-5">
-              <img src="./assets/icons/Brendlar (12).svg" alt="" />
+              <img src="./assets/icons/Brendlar (3).svg" alt="" />
             </span>
 
             <span class="card-5">
@@ -891,7 +898,7 @@
             </span>
 
             <span class="card-5">
-              <img src="./assets/icons/Brendlar (12).svg" alt="" />
+              <img src="./assets/icons/Brendlar (3).svg" alt="" />
             </span>
           </div>
         </section>
@@ -933,13 +940,18 @@
           <li>+998 97 712 96 96 <br />+998 95 503 09 09</li>
           <li>Sag’bon 186, Olmazor tumani, Toshkent, O'zbekiston</li>
           <span id="icons">
-          <img src="./assets/icons/FACEBOOK.svg" alt="" />
-          <img src="./assets/icons/INSTAGRAM.svg" alt="" />
-          <img src="./assets/icons/Telegram - Original.svg" alt="" />
-          <img src="./assets/icons/TikTok - Original.svg" alt="" />
-        </span>
+            <img src="./assets/icons/FACEBOOK.svg" alt="" />
+            <img src="./assets/icons/INSTAGRAM.svg" alt="" />
+            <img src="./assets/icons/Telegram - Original.svg" alt="" />
+            <img src="./assets/icons/TikTok - Original.svg" alt="" />
+          </span>
         </ul>
-        
+      </div>
+      <div class="container">
+        <div class="end">
+          <p>2022 Nextstore.com</p>
+          <p>Powered by</p>
+        </div>
       </div>
     </footer>
     <!-- footer ends -->
